force-app/main/default/objects/Configuration_Settings__c/fields/Active_TAdA_Provider__c.field-meta.xml
<CustomField>
    <fullName>Active_TAdA_Provider__c</fullName>
    <description>This Stores the Carrier Key value of the TAdA Provider Gusto currently partners with</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This Stores the Carrier Key value of the TAdA Provider Gusto currently partners with</inlineHelpText>
    <label>Active TAdA Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>