force-app/main/default/objects/Configuration_Settings__c/fields/BMR_Aditional_CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>BMR_Aditional_CC_Addresses__c</fullName>
    <description>We are using this field value to store the User email address whom we want to introduce in every email from Case/BMR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BMR Aditional CC Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>