force-app/main/default/objects/Configuration_Settings__c/fields/Disable_Auto_Approve_TTF__c.field-meta.xml
<CustomField>
    <fullName>Disable_Auto_Approve_TTF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control auto approval of TTF</description>
    <inlineHelpText>Checkbox to control auto approval of TTF</inlineHelpText>
    <label>Disable Auto Approve TTF</label>
    <type>Checkbox</type>
</CustomField>