force-app/main/default/objects/Configuration_Settings__c/fields/Engagement_Alert_Subject_Lines__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Alert_Subject_Lines__c</fullName>
    <description>Route Cases containing the subjects separated by &quot;|&quot; to the Engagement Alert Queue. Format: ^.*(?i)(subject 1|subject 2|etc)\b.*$</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Format:
^.*(?i)(subject 1|subject 2|etc)\b.*$</inlineHelpText>
    <label>Engagement Alert Subject Lines</label>
    <type>TextArea</type>
</CustomField>