force-app/main/default/objects/Configuration_Settings__c/fields/GF_Ticket_Processing_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>GF_Ticket_Processing_Batch_Size__c</fullName>
    <label>GF Ticket Processing Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>