force-app/main/default/objects/Configuration_Settings__c/fields/HI_Company_Active_Benefit_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>HI_Company_Active_Benefit_Batch_Size__c</fullName>
    <label>HI Company Active Benefit Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>