force-app/main/default/objects/Configuration_Settings__c/fields/HI_Effective_date__c.field-meta.xml
<CustomField>
    <fullName>HI_Effective_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI Effective Date</label>
    <type>Date</type>
</CustomField>