force-app/main/default/objects/Configuration_Settings__c/fields/PayrollComplianceEntitlementId__c.field-meta.xml
<CustomField>
    <fullName>PayrollComplianceEntitlementId__c</fullName>
    <description>PayrollComplianceEntitlementId</description>
    <label>PayrollComplianceEntitlementId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>