force-app/main/default/objects/Configuration_Settings__c/fields/Privacy_Requests_Cookie_Key__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Requests_Cookie_Key__c</fullName>
    <description>DO NOT EDIT. For Privacy Requests. The key used to encrypt cookie to access the Privacy Request page.</description>
    <inlineHelpText>DO NOT EDIT. For Privacy Requests (CCPA).</inlineHelpText>
    <label>Privacy Requests Cookie Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>