force-app/main/default/objects/Configuration_Settings__c/fields/ProcessFailedAutoSolvePkgCasesBatch__c.field-meta.xml
<CustomField>
    <fullName>ProcessFailedAutoSolvePkgCasesBatch__c</fullName>
    <label>ProcessFailedAutoSolvePkgCasesBatch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>