force-app/main/default/objects/Configuration_Settings__c/fields/RFI_Type_To_Be_Excluded__c.field-meta.xml
<CustomField>
    <fullName>RFI_Type_To_Be_Excluded__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFI Type To Be Excluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>