force-app/main/default/objects/Configuration_Settings__c/fields/RiskEntitlementId__c.field-meta.xml
<CustomField>
    <fullName>RiskEntitlementId__c</fullName>
    <description>RiskEntitlementId</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RiskEntitlementId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>