force-app/main/default/objects/Configuration_Settings__c/fields/Send_BYB_Survey_After__c.field-meta.xml
<CustomField>
    <fullName>Send_BYB_Survey_After__c</fullName>
    <description>Number of days after the Benefit Order was updated to Fulfilled to send the Survey</description>
    <label>Send BYB Survey After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>