force-app/main/default/objects/Configuration_Settings__c/fields/Special_Enrollment_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Special_Enrollment_Deadline_Date__c</fullName>
    <description>Used to handle &quot;Special Enrollment Period (SEP)&quot; to ensure all Medical carrier orders are submitted prior to the SEP the deadline of 12/15[can be changed]</description>
    <label>Special Enrollment Deadline Date</label>
    <type>Date</type>
</CustomField>