force-app/main/default/objects/Configuration_Settings__c/fields/TaxRes_Agatha_Sync_Time_Gap_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>TaxRes_Agatha_Sync_Time_Gap_in_Minutes__c</fullName>
    <description>This field is used to calculate the time difference needed to query Cases where &quot;Agency Info Agatha&quot; is not synced properly.</description>
    <inlineHelpText>This field is used to calculate the time difference needed to query Cases where &quot;Agency Info Agatha&quot; is not synced properly.</inlineHelpText>
    <label>TaxRes Agatha Sync Time Gap in Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>