force-app/main/default/objects/Configuration_Settings__c/fields/TaxRes_Agencies_to_Ignore__c.field-meta.xml
<CustomField>
    <fullName>TaxRes_Agencies_to_Ignore__c</fullName>
    <description>This custom setting is used to store agencies which should be ignored from the case routing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TaxRes Agencies to Ignore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>