force-app/main/default/objects/Configuration_Settings__c/fields/UpdateHIExpiredFlagBatchSize__c.field-meta.xml
<CustomField>
    <fullName>UpdateHIExpiredFlagBatchSize__c</fullName>
    <label>UpdateHIExpiredFlagBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>