force-app/main/default/objects/Configuration_Settings__c/fields/ZP_Company_Migration_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Migration_Batch_Size__c</fullName>
    <description>Batch size for re-processing errored and queued ZP Company Migration records</description>
    <label>ZP Company Migration Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>